syntax = "proto3";
import "google/protobuf/struct.proto";

package v1;
option go_package = "github.com/cossim/hipush/api/grpc/v1";

message Alert {
  string title = 1;
  string body = 2;
  string subtitle = 3;
  string action = 4;
  string actionLocKey = 5;
  string launchImage = 6;
  string locKey = 7;
  string titleLocKey = 8;
  repeated string locArgs = 9;
  repeated string titleLocArgs = 10;
}

message PushRequest {
  int32 platform = 1;
  repeated string tokens = 2;
  string title = 4;
  string message = 3;
  string topic = 5;
  string key = 6;
  string category = 8;
  string sound = 10;
  Alert alert = 9;
  int32 badge = 7;
  string threadID = 12;
  google.protobuf.Struct data = 14;
  string image = 15;
  string ID = 17;
  string pushType = 18;
  string appID = 19;
  enum Priority {
    NORMAL = 0;
    HIGH = 1;
  }
  Priority priority = 16;
  bool contentAvailable = 11;
  bool mutableContent = 13;
  // default is production
  bool development = 20;
}

message PushResponse {
  bool success = 1;
  int32 counts = 2;
}

service PushService {
  rpc Push (PushRequest) returns (PushResponse) {}
}